# merkle-proof

./: Cargo.toml  README.md  whitelist.txt
output/: merkleData.json
src/: helpers.rs  main.rs  merkle.rs
