[package]
name = "merkle-proof"
version = "0.1.0"
edition = "2021"
author = "@0xSpraggins"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-dyn-abi = "0.6.0"
alloy-merkle-tree = "0.5.0"
alloy-primitives = "0.6.4"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
